Added functional grasses navigation to all grass related pages.

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -43,5 +43,6 @@
 
     <!-- Styles -->
     <link rel="stylesheet" href="{{ site.data.global.url }}/css/style.css">
+    <link rel="stylesheet" href="{{ site.data.global.url }}/css/sidenav.css">
     {% include ie_lt_9_style_fix.html %}
 </head>
