--- a/_includes/js.html
+++ b/_includes/js.html
@@ -2,3 +2,4 @@
 <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
 <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
 <script src="{{ site.data.global.url }}/js/power.js"></script>
+<script src="{{ site.data.global.url }}/js/sidenav.js"></script>
