Dynamic side navigation

--- a/_includes/title-group.html
+++ b/_includes/title-group.html
@@ -26,6 +26,7 @@
             {% endif %}
         </aside>
     {% endif %}
+    <span style="font-size:16px;cursor:pointer" onclick="openNav()">&#9776; grass navigation</span>
     <p class="lead">
         {% if page.lead_text %}
             {{ page.lead_text }}
