--- a/_includes/body.html
+++ b/_includes/body.html
@@ -6,7 +6,7 @@
                 layout-{{ page.layout-class }}
               {% endif %}" >
 
-    {% include navbar.html %}
+    {% include topnav.html %}
 
     {% include topper.html %}
 
