--- a/css/style.scss
+++ b/css/style.scss
@@ -19,7 +19,7 @@ body {
     -webkit-font-smoothing: antialiased;
 }
 p {
-    margin-bottom: 30px;
+    margin-bottom: 20px;
 }
 section, header, footer, main, article, nav, aside { position: relative; }
 a {
@@ -80,8 +80,8 @@ h1.special {
     margin: 0;
     text-transform: uppercase;
     @extend %oswald;
-    font-size: 69px;
-    line-height: 69px;
+    font-size: 40px;
+    line-height: 40px;
     font-weight: 700;
     color: $scotch-primary;
 
@@ -235,6 +235,8 @@ aside {
 }
 
 .site-footer {
+    font-size: 16px;
+    line-height: normal;
     margin-top: 200px;
 }
 
@@ -287,8 +289,8 @@ pre {
 
     h1.special,
     .tile h2 {
-        font-size: 40px;
-        line-height: 44px;
+        font-size: 30px;
+        line-height: 33px;
     }
 
     .tile .inner-guts {
