--- a/css/topnav.css
+++ b/css/topnav.css
@@ -34,23 +34,29 @@ ul.topnav li.dropdown {
 ul.topnav li.dropdown .dropdown-content {
     display: none;
     position: absolute;
-    -webkit-column-count: 2; /* Chrome, Safari, Opera */
-    -moz-column-count: 2; /* Firefox */
-    column-count: 2;
+
+    -webkit-columns: 80px 2; /* Chrome, Safari, Opera */
+    -moz-columns: 80px 2; /* Firefox */
+    columns: 80px 2;
+
     -webkit-column-gap: 10px; /* Chrome, Safari, Opera */
     -moz-column-gap: 10px; /* Firefox */
     column-gap: 10px;
+
     -webkit-column-rule-style: solid; /* Chrome, Safari, Opera */
     -moz-column-rule-style: solid; /* Firefox */
     column-rule-style: solid;
+
     -webkit-column-rule-width: 1px; /* Chrome, Safari, Opera */
     -moz-column-rule-width: 1px; /* Firefox */
     column-rule-width: 1px;
+
     -webkit-column-rule-color: black; /* Chrome, Safari, Opera */
     -moz-column-rule-color: black; /* Firefox */
     column-rule-color: black;
+
     background-color: white;
-    width: 200%;
+    width: 100%;
     min-width: 280px;
     box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
 }
@@ -104,28 +110,5 @@ ul.topnav li.icon {display: none;}
   ul.topnav.responsive li a {
     display: block;
     text-align: left;
-  }
-
-  ul.topnav.responsive li.dropdown .dropdown-content {
-    position: absolute;
-    -webkit-column-count: 2; /* Chrome, Safari, Opera */
-    -moz-column-count: 2; /* Firefox */
-    column-count: 2;
-    -webkit-column-gap: 10px; /* Chrome, Safari, Opera */
-    -moz-column-gap: 10px; /* Firefox */
-    column-gap: 10px;
-    -webkit-column-rule-style: solid; /* Chrome, Safari, Opera */
-    -moz-column-rule-style: solid; /* Firefox */
-    column-rule-style: solid;
-    -webkit-column-rule-width: 1px; /* Chrome, Safari, Opera */
-    -moz-column-rule-width: 1px; /* Firefox */
-    column-rule-width: 1px;
-    -webkit-column-rule-color: black; /* Chrome, Safari, Opera */
-    -moz-column-rule-color: black; /* Firefox */
-    column-rule-color: black;
-    background-color: white;
-    width: 100%;
-    min-width: 280px;
-    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
   }
 }
