--- a/_includes/tile.html
+++ b/_includes/tile.html
@@ -11,7 +11,7 @@
     </a>
     {% endif %}
     <div class="inner-guts">
-        <h2><a href="{{ post.url | prepend: site.baseurl }}">{{ post.title }}</a></h2>
+        <h4><a href="{{ post.url | prepend: site.baseurl }}">{{ post.title }}</a></h4>
         <aside>
             {{ post.date | date: "%m.%d.%y" }}
             {% if post.categories != empty %}
@@ -22,7 +22,7 @@
             {% endif %}
         </aside>
         <div class="excerpt">{{ post.excerpt }}</div>
-        <a href="{{ post.url | prepend: site.baseurl }}" class="read-more btn btn-info btn-lg">Read More <i class="fa fa-angle-right"></i></a>
+        <a href="{{ post.url | prepend: site.baseurl }}" class="read-more btn btn-info">Read More <i class="fa fa-angle-right"></i></a>
         {% if post.categories != empty %}
         <div class="tags">
             {% for tag in post.tags %}
