Update blog page. Added support for image display with captions in a grid

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -44,5 +44,6 @@
     <!-- Styles -->
     <link rel="stylesheet" href="{{ site.data.global.url }}/css/style.css">
     <link rel="stylesheet" href="{{ site.data.global.url }}/css/topnav.css">
+    <link rel="stylesheet" href="{{ site.data.global.url }}/css/figure.css">
     {% include ie_lt_9_style_fix.html %}
 </head>
